--- a/web-cliente/src/App.css
+++ b/web-cliente/src/App.css
@@ -7,3 +7,4 @@
 @import "../node_modules/@syncfusion/ej2-popups/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-splitbuttons/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-react-grids/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-react-schedule/styles/tailwind.css";
