--- a/simulador-acceso/src/App.css
+++ b/simulador-acceso/src/App.css
@@ -1,42 +1,39 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.encuadro {
+  perspective: 600px;
+  position: fixed;
+  border-radius: 4px;
+  width: 500px;
+  height: 500px;
+  top: calc(50% - 250px);
+  left: calc(50% - 250px);
+  background: url('./assets/simulador.png') no-repeat center center fixed;
+  background-size: 500px 500px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.encuadro::after {
+  content: '';
+  position: absolute;
+  top: 130px;
+  left: 314px;
+  background-color: black;
+  width: 60px;
+  height: 60px;
+  transform: rotate3d(0, 1, 0, -30deg);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.estado {
+  transform: rotate3d(0, 1, 0, -30deg);
+  position: absolute;
+  top: 134px;
+  left: 320px;
+  width: 50px;
+  height: 50px;
+  background: url('./assets/x.png') no-repeat center center fixed;
+  background-size: 100%;
+  z-index: 100;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.estado.go {
+  background: url('./assets/go.png') no-repeat center center fixed;
+  background-size: 100%;
 }
