--- a/web-cliente/src/App.css
+++ b/web-cliente/src/App.css
@@ -8,3 +8,4 @@
 @import "../node_modules/@syncfusion/ej2-splitbuttons/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-react-grids/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-react-schedule/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-react-dropdowns/styles/tailwind.css";
