--- a/web-cliente/src/App.css
+++ b/web-cliente/src/App.css
@@ -9,3 +9,4 @@
 @import "../node_modules/@syncfusion/ej2-react-grids/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-react-schedule/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-react-dropdowns/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-react-inputs/styles/tailwind.css";
