--- a/web-cliente/src/App.css
+++ b/web-cliente/src/App.css
@@ -10,3 +10,5 @@
 @import "../node_modules/@syncfusion/ej2-react-schedule/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-react-dropdowns/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-react-inputs/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-react-barcode-generator/styles/tailwind.css";
+@import "../node_modules/@syncfusion/ej2-react-barcode-generator/styles/tailwind.css";
