--- a/web-cliente/src/App.css
+++ b/web-cliente/src/App.css
@@ -11,4 +11,4 @@
 @import "../node_modules/@syncfusion/ej2-react-dropdowns/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-react-inputs/styles/tailwind.css";
 @import "../node_modules/@syncfusion/ej2-react-barcode-generator/styles/tailwind.css";
-@import "../node_modules/@syncfusion/ej2-react-barcode-generator/styles/tailwind.css";
+/* @import "../node_modules/@syncfusion/ej2-react-charts/"; */
