--- a/simulador-acceso/src/App.css
+++ b/simulador-acceso/src/App.css
@@ -1,39 +1,88 @@
-.encuadro {
-  perspective: 600px;
-  position: fixed;
-  border-radius: 4px;
-  width: 300px;
-  height: 300px;
-  top: calc(50% - 150px);
-  left: calc(50% - 150px);
-  background: url('./assets/simulador.png') no-repeat center center fixed;
-  background-size: 300px 300px;
+.header {
+  display: flex;
+  width: 100%;
+  gap: 20px;
+  justify-content: center;
 }
 
-.encuadro::after {
-  content: '';
+.header img {
+  width: 100px;
+  height: 120px;
+}
+
+.header .logo img {
+  width: 220px;
+}
+
+.atrevete {
+  display: flex;
+  flex-direction: column;
+  font-size: 45px;
+  font-weight: bold;
+  max-width: 350px;
+  word-wrap: break-word;
+}
+
+.inge {
+  font-size: 50px;
+  font-weight: 900;;
+}
+
+.sello {
+  font-size: 100px;
+  font-weight: 900;
+  color: #fcd204;
+}
+
+.estudiante {
+  display: flex;
+  height: 80%;
+  padding: 100px;
+  justify-content: center;
+}
+
+.photo {
+  width: 20%;
+  height: 70%;
+  border: 4px solid white;
+  border-radius: 10px;
+  position: relative;
+}
+
+.photo.go {
+  background: url('./assets/avatar.jpg') 100% 100% no-repeat;
+  background-size: cover;
+}
+
+.granted {
   position: absolute;
-  top: 80px;
-  left: 185px;
-  background-color: black;
-  width: 40px;
-  height: 40px;
-  transform: rotate3d(0, 1, 0, -30deg);
+  bottom: -40px;
+  left: calc(20% - 10px);
+  background-color: green;
+  padding: 4px 8px;
+  border-radius: 10px;
 }
 
-.estado {
-  transform: rotate3d(0, 1, 0, -30deg);
+.rejected {
   position: absolute;
-  top: 84px;
-  left: 187px;
-  width: 35px;
-  height: 35px;
-  background: url('./assets/x.png') no-repeat center center fixed;
-  background-size: 100%;
-  z-index: 100;
+  bottom: -40px;
+  left: calc(20% - 10px);
+  background-color: red;
+  padding: 4px 8px;
+  border-radius: 10px;
 }
 
-.estado.go {
-  background: url('./assets/go.png') no-repeat center center fixed;
-  background-size: 100%;
+.details {
+  flex: 1;
+  padding: 0 20px;
+}
+
+.detalles {
+  font-size: 40px;
+  color: white;
+  line-height: 2;
+}
+
+.detalles.bad {
+  color: red;
 }
