--- a/simulador-acceso/src/index.css
+++ b/simulador-acceso/src/index.css
@@ -18,6 +18,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+#root {
+  height: 100%;
+}
 
 html, body {
   height: 100vh;
@@ -27,7 +30,6 @@ html, body {
 main {
   width: 100%;
   height: 100%;
-  text-align: center;
   padding: 12px;
 }
 
