--- a/simulador-acceso/src/App.css
+++ b/simulador-acceso/src/App.css
@@ -1,88 +1,8 @@
 .header {
-  display: flex;
-  width: 100%;
-  gap: 20px;
-  justify-content: center;
-}
-
-.header img {
-  width: 100px;
-  height: 120px;
-}
-
-.header .logo img {
-  width: 220px;
-}
-
-.atrevete {
-  display: flex;
-  flex-direction: column;
-  font-size: 45px;
-  font-weight: bold;
-  max-width: 350px;
-  word-wrap: break-word;
-}
-
-.inge {
-  font-size: 50px;
-  font-weight: 900;;
-}
-
-.sello {
-  font-size: 100px;
-  font-weight: 900;
-  color: #fcd204;
-}
-
-.estudiante {
-  display: flex;
-  height: 80%;
-  padding: 100px;
-  justify-content: center;
-}
-
-.photo {
-  width: 20%;
-  height: 70%;
-  border: 4px solid white;
-  border-radius: 10px;
-  position: relative;
-}
-
-.photo.go {
-  background: url('./assets/avatar.jpg') 100% 100% no-repeat;
-  background-size: cover;
-}
-
-.granted {
-  position: absolute;
-  bottom: -40px;
-  left: calc(20% - 10px);
-  background-color: green;
-  padding: 4px 8px;
-  border-radius: 10px;
-}
-
-.rejected {
-  position: absolute;
-  bottom: -40px;
-  left: calc(20% - 10px);
-  background-color: red;
-  padding: 4px 8px;
-  border-radius: 10px;
-}
-
-.details {
-  flex: 1;
-  padding: 0 20px;
-}
-
-.detalles {
-  font-size: 40px;
-  color: white;
-  line-height: 2;
-}
-
-.detalles.bad {
-  color: red;
+  height: 100px;
+  background: url('./assets/emi.png') 100% 100% no-repeat;
+  background-size: contain;
+  background-position: center center;
+  border-radius: 20px;
+  background-color: #002F8F;
 }
