--- a/simulador-acceso/src/index.css
+++ b/simulador-acceso/src/index.css
@@ -10,7 +10,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #002f8f;
+  background-color: #fff;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
